[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "haensel-ams-attribution"
version = "0.1.0"
description = "Attribution pipeline solution for the Haensel AMS data engineering challenge."
requires-python = ">=3.10"
dependencies = [
    "pandas>=2.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[project.scripts]
haensel-attribution = "attribution_pipeline.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
